@@ -254,6 +254,6 @@ install(TARGETS ${TARGET} EXPORT targets
     RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}/")
 install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/libmpg123/mpg123.h"
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
-install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/libmpg123/fmt123.h"
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/../../../../src/fmt123.h"
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}")
 
