@@ -30,7 +30,7 @@
 
 /**************************************************************************/
 
-#include "out123_int.h"
+#include "../out123_int.h"
 
 #include <fcntl.h>
 
