@@ -8,7 +8,7 @@
 */
 
 
-#include "out123_int.h"
+#include "../out123_int.h"
 #include <artsc.h>
 #include "debug.h"
 
