@@ -8,7 +8,7 @@
 
 /* First the common header, including config.h
    ...this is important for stuff like _FILE_OFFSET_BITS */
-#include "out123_int.h"
+#include "../out123_int.h"
 
 #include <esd.h>
 #include <errno.h>
