@@ -6,7 +6,7 @@
 	initially written by Martin Denn
 */
 
-#include "out123_int.h"
+#include "../out123_int.h"
 #include <fcntl.h>
 #include <audio/audiolib.h>
 #include <audio/soundlib.h>
