@@ -6,7 +6,7 @@
 	initially written (as it seems) by Thomas Woerner
 */
 
-#include "out123_int.h"
+#include "../out123_int.h"
 #include <fcntl.h>
 #include <dmedia/audio.h>
 #include "errno.h"
