@@ -17,7 +17,7 @@
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
-#include "out123_int.h"
+#include "../out123_int.h"
 
 #include <sndio.h>
 
