@@ -9,7 +9,7 @@
     Closing buffer playback fixed by David Wohlferd <limegreensocks (*) yahoo dod com>
 */
 
-#include "out123_int.h"
+#include "../out123_int.h"
 #include <windows.h>
 #include "debug.h"
 
