@@ -14,7 +14,7 @@
 # define _WIN32_WINNT 0x0601
 #endif
 #define COBJMACROS 1
-#include "out123_int.h"
+#include "../out123_int.h"
 #include <inttypes.h>
 #include <initguid.h>
 #include <audioclient.h>
