@@ -58,25 +58,25 @@ endif
 src_tests_volume_SOURCES = \
   src/tests/volume.c
 src_tests_volume_LDADD = \
-  src/libsyn123/libsyn123.la
+  @LIBSYN123@
 
 src_tests_decode_fixed_SOURCES = \
   src/tests/decode_fixed.c
 src_tests_decode_fixed_LDADD = \
   src/compat/libcompat.la \
-  src/libmpg123/libmpg123.la
+  @LIBMPG123@
 
 src_tests_seek_whence_SOURCES = \
   src/tests/seek_whence.c
 src_tests_seek_whence_LDADD = \
   src/compat/libcompat.la \
-  src/libmpg123/libmpg123.la
+  @LIBMPG123@
 
 src_tests_seek_accuracy_SOURCES = \
   src/tests/seek_accuracy.c
 src_tests_seek_accuracy_LDADD = \
   src/compat/libcompat.la \
-  src/libmpg123/libmpg123.la
+  @LIBMPG123@
 
 src_tests_noise_SOURCES = \
   src/tests/noise.c \
@@ -89,20 +89,20 @@ src_tests_sweeper_SOURCES = \
   src/tests/sweeper.c
 src_tests_sweeper_LDADD = \
   src/compat/libcompat.la \
-  src/libsyn123/libsyn123.la \
-  src/libout123/libout123.la
+  @LIBSYN123@ \
+  @LIBOUT123@
 
 src_tests_resample_total_SOURCES = \
   src/tests/resample_total.c
 src_tests_resample_total_LDADD = \
-  src/libsyn123/libsyn123.la
+  @LIBSYN123@
 
 src_tests_text_SOURCES = \
   src/tests/text.c \
   src/tests/testtext.h
 src_tests_text_LDADD = \
   src/compat/libcompat.la \
-  src/libmpg123/libmpg123.la
+  @LIBMPG123@
 
 src_tests_textprint_SOURCES =\
   src/tests/textprint.c \
@@ -111,10 +111,10 @@ src_tests_textprint_SOURCES =\
 
 src_tests_textprint_LDADD = \
   src/compat/libcompat.la \
-  src/libmpg123/libmpg123.la
+  @LIBMPG123@
 
 src_tests_plain_id3_SOURCES = \
   src/tests/plain_id3.c
 src_tests_plain_id3_LDADD = \
   src/compat/libcompat.la \
-  src/libmpg123/libmpg123.la
+  @LIBMPG123@
